# multi-codex

./: README.md  blog.md  multi_codex.py  pyproject.toml
.githooks/: post-commit
.github/workflows/: tests.yml
multi_codex/: __init__.py  core.py  ui.py
multi_codex/prompts/: __init__.py  arch_deep_dive.md  branch_comparison.md  feature_security_analysis.md  pr_long_context.md
tests/: conftest.py  test_core.py  test_ui.py
