[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-codex"
version = "0.1.0"
description = "GitHub branch evaluator that builds a copy-paste prompt"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.0",
    "tiktoken>=0.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"multi_codex.prompts" = ["*.md"]

[project.scripts]
multi-codex = "multi_codex.ui:main"
